GNU C Library NEWS -- history of user-visible changes.
Copyright (C) 1992-2025 Free Software Foundation, Inc.
See the end for copying conditions.

Please send GNU C library bug reports via <https://sourceware.org/bugzilla/>
using `glibc' in the "product" field.

Version 2.41.1

The following bugs were resolved with this release:

  [32269] RISC-V IFUNC resolver cannot access gp pointer
  [32626] math: math: log10p1f is not correctly rounded
  [32627] math: math: sinhf is not correctly rounded
  [32630] math: math: tanf is not correctly rounded for all rounding
    modes
  [32781] Linux: Remove attribute access from sched_getattr
  [32782] nptl: Race conditions in pthread cancellation causing crash
  [32786] nptl: PTHREAD_COND_INITIALIZER compatibility with pre-2.41 versions
  [32810] Crash on x86-64 if XSAVEC disable via tunable

Version 2.41

Major new features:

* Support for testing a glibc build with a set of C and C++ compilers
  different from the C and C++ compilers used to build glibc has been
  added:
  $ ../configure TEST_CC="gcc-6.4.1" TEST_CXX="g++-6.4.1"

  This includes support for testing the glibc build with Clang, e.g.,
  $ ../configure TEST_CC="clang" TEST_CXX="clang++"

  Some run-time failures with Clang are expected.

* The glibc test suite has been extended again significantly, with now
  6232 separate tests compared to 5408 in glibc-2.40.

* In /etc/resolv.conf and the RES_OPTIONS environment variable, option
  flags can now be prefixed with “-” to clear previously set flags.
  For example, if /etc/resolv.conf contains “options no-aaaa”, a
  process running with the RES_OPTIONS=-no-aaaa environment variable
  performs AAAA DNS queries when the glibc DNS stub resolver is used.

* The DNS stub resolver now supports the strict-error option.  If
  activated, getaddrinfo for the AF_UNSPEC address family (with dual
  A/AAAA DNS lookups) attemps to obtain an A/AAAA response pair from