@@ -1,0 +1,1 @@
+#include <tst-execstack-prog-static.c>
